--- a/bing.css
+++ b/bing.css
@@ -1,9 +1,14 @@
 #top{
     color:rgb(132, 59, 201);
-    border: 1px solid rgb(51, 51, 219);
     font-size: 14px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
     text-transform: uppercase;
     text-decoration: underline;
+}
+h4 img {
+    display :block;
+    width: 500px;
+    height: 500px;
+    margin : 0 auto;
 }
